--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -26,9 +26,28 @@
 		</init-param>
 		
 	</servlet>
+	
+		<servlet>
+		<servlet-name>Controllers</servlet-name>
+		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+		<!-- Register resources and providers under com.vogella.jersey.first package. -->
+		<init-param>
+			<param-name>jersey.config.server.provider.packages</param-name>
+			<param-value>com.guides.controllers</param-value>
+		</init-param>
+		<init-param>
+			<param-name>jersey.config.server.provider.classnames</param-name>
+			<param-value>org.glassfish.jersey.server.mvc.jsp.JspMvcFeature</param-value>
+		</init-param>
+		
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Web Services</servlet-name>
 		<url-pattern>/API/*</url-pattern>
+	</servlet-mapping>
+		<servlet-mapping>
+		<servlet-name>Controllers</servlet-name>
+		<url-pattern>/controller/*</url-pattern>
 	</servlet-mapping>
 	
 	
